k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-service
spec:
  selector:
    app: socket-app
  ports:
    - protocol: 'TCP'
      port: 8082
      targetPort: 8080
  type: LoadBalancer
